# ethical-red-teamer

./: Dockerfile  README.md  __init__.py  client.py  gitlog.txt  inference.py  models.py  openenv.yaml  pyproject.toml  tasks.py
.history/: README_20260408203609.md  README_20260408204820.md  inference_20260408203558.py  inference_20260408205239.py  inference_20260408215232.py  inference_20260408215242.py  inference_20260408215440.py
scripts/: validate-submission.sh
server/: __init__.py  app.py  red_team_environment.py  requirements.txt
