[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ethical-red-teamer"
version = "1.0.0"
description = "AI Safety & Ethics OpenEnv Environment — Ethical Red-Teamer"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.25.0",
]
